Solved Priority Queue Inverse dequeue